app/styles/main.css
body {
    background: #fafafa;
    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
    color: #333;
}

.browsehappy {
    margin: 0.2em 0;
    background: #ccc;
    color: #000;
    padding: 0.2em 0;
}

/* Everything but the jumbotron gets side spacing for mobile first views */
.header,
.marketing,
.footer {
    padding-left: 15px;
    padding-right: 15px;
}

.jumbotron {
    text-align: center;
    border-bottom: 1px solid #48525d;
    background-color: #48525d;
    color: #fff;
}

/* Custom page header */
.header {
    border-bottom: 1px solid #e5e5e5;
}

/* Make the masthead heading the same height as the navigation */
.header h3 {
    margin-top: 0;
    margin-bottom: 0;
    line-height: 40px;
    padding-bottom: 19px;
}

.container-narrow > hr {
    margin: 30px 0;
}

.list-group-scroll {
    max-height: 230px;
    overflow: hidden;
    overflow-y: auto;
}

#amountNumber, #amountSpecified {
    display: none;
}

.create {
    padding-top: 1.5em;
    padding-bottom: 1.5em;
}

.wait {
    display: none;
    left: 50%;
    padding: 2em;
    padding-bottom: 4em;
}

.plan {
    background-color: #9a8c77;
    display: none;
}

.fade {
    -webkit-animation: fade 1s;
    -o-animation: fade 1s;
    animation: fade 1s;
    display: block;
    opacity: 1;
}

/* -fail- */
@-webkit-keyframes fade {
    from {opacity: 0}
    to {opacity: 1}
}
@keyframes fade {
    from {opacity: 0}
    to {opacity: 1}
}

.actions {
    text-align: center;    
}

.save, .share {
    padding-bottom: 10px;
}

.save a, .share a {
    display: none;
}

table {
    background-color: white;
}

.legal {
    display: none;
}

/* Custom page footer */
footer {
    padding-top: 19px;
    border-top: 1px solid #e5e5e5;
    background-color: #48525d;
    color: #eee;
}

footer a {
    color: #eee;
}

/* Responsive: Portrait tablets and up */
@media screen and (min-width: 768px) {
    /* Remove the padding we set earlier */
    .header,
    .marketing,
    .footer {
        padding-left: 0;
        padding-right: 0;
    }
    /* Space out the masthead */
    .header {
        margin-bottom: 30px;
    }
    /* Remove the bottom border on the jumbotron for visual effect */
    .jumbotron {
        border-bottom: 0;
    }
}

/* Print */
@media print {
    body {
      background: white;
      font-size: 12pt;
      font-family: serif;
    }
    
    .plan,
    .jumbotron {
      width: auto;
      margin: 0 5%;
      padding: 0;
      border: 0;
      color: black;
    }
    
    /* hide elements we don't want to print */
    div .col-md-6,
    .create,
    .save,
    .share,
    footer {
     display: none;
    }
}

